# medical-office-backend

./: .project-structure.txt  README.md  examples.py  medicine_procedures.sql  mykey  mykey.pub  pyproject.toml
.idx/: dev.nix
app/: config.py  exceptions.py  generics.py  main.py  utils.py
app/base/: common.py  models.py  repositories.py  services.py
app/medical_diagnosis/: models.py  repositories.py  routers.py  schemas.py  services.py
app/medicine/: models.py  repositories.py  routers.py  schemas.py  services.py
app/prescription/: models.py  repositories.py  routers.py  schemas.py  services.py
app/schedule/: models.py  repositories.py
app/user/: models.py  repositories.py  routers.py  schemas.py  services.py
tests/: test_medical_diagnoses.py  test_medicines.py  test_prescriptions.py  test_schedules.py  test_users.py  test_utils.py  utils.py
tests/integration/: base.py  medicine.py  user.py
