[project]
name = "vidaplena-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cristian Antelo Terrazas", email = "canteloterrazas02@gmail.com"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "Pygments==2.19.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "rich==14.0.0",
    "rich-toolkit==0.14.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typer==0.15.2",
    "typing-inspection==0.4.0",
    "typing-extensions==4.13.2",
    "uvicorn==0.34.1",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "pytest-asyncio>=0.26.0",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2.9",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
